style.css
:root{
  --promo--width: 1vw;
  --promo--height: 1vh;
  --promo-translateX: 10%;

  --poster-width:100vw;
  --poster-height:100vh;
  --poster-padding-top: 16vh;
  --poster-row-height:110vh;
  --poster-h1-width: 1vw;
  --poster-h1-height:1vh;
  --poster-h1-fontsize:30px;
  --poster-text-position-left:49%;
  --poster-text-position-top:50%;
  --poster-text-translateX: translateX(-50%);
  --poster-text-translateY: translateY(-50%);
  --poster-p-width:1vw;
  --poster-p-height:1vh;
  --poster-p-fontsize:28px;
  --standard-font-family:'EB Garamond', serif;

  --scroll-highlight-content-base-width: 100%;
  --scroll-highlight-mask-base-height: 100%;
  --scroll-highlight-number-of-visible-items: 3;

  --scroll-highlight-container-height:50%;
  --scroll-highlight-cell-width: calc((100% - (var(--scroll-highlight-column-gap) * (var(--scroll-highlight-number-of-visible-items) - 1)) ) / var(--scroll-highlight-number-of-visible-items));

  --scroll-highlight-cell-height:91.5%;
  --scroll-highlight-column-gap:5%;
  --scroll-highlight-margin:5%;



}
.scroll-highlight__container--selection {
  --scroll-highlight-number-of-visible-items: 5;
    --scroll-highlight-cell-height:91.5%;
  --scroll-highlight-column-gap:5%;
  --scroll-highlight-margin:5%;
  --scroll-highlight-cell-width: calc((100% - (var(--scroll-highlight-column-gap) * (var(--scroll-highlight-number-of-visible-items) - 1)) ) / var(--scroll-highlight-number-of-visible-items))
}


*{
  margin: 0;
  padding:0;
}


#video-background {
  position: fixed;
  top: 0;
  left: 0;
  z-index: -1;
  width: 100%;
  height: 100%;
  object-fit: cover; /*the fill type of the media*/
  
}
body{
  /*background-color:rgba(0, 0, 0, 0);*/
  overflow-x: hidden;
  /*! width:100vw; */
}

header{
  display:grid;
  grid-template-rows: max-content max-content;
  position: relative;
  z-index: -1;
}

footer {
  height: 64.1vh;
}

#logo{
  width: 100%;
  padding-top: 15px;
  padding-bottom: 14px;
  background-color: rgba(52, 80, 80, 0.85);
  z-index: 1;
  
}

#logo__image{
  display:block; /*Since images are always inline, text-align also work on centering etc.*/
  margin:0 auto;
  z-index: 1;
}
/*CARPETS /////////////////////////////////////////////////*/
#dropdown-carpet-background{
  position: absolute;
  left: 0;
  top: 100%;
  width: 100vw;
  height: var(--submenu-height);
  background: rgb(0, 0, 0);
  opacity:0;
  transition: opacity 1s ease-in-out, height 0.5s ease-in-out;
  pointer-events:none;
}
#dropdown-carpet{
  position: absolute;
  left: 0;
  top: 100%;
  width: 100vw;
  height: var(--submenu-height);
  background: rgba(255, 255, 255, 0.9);
  clip-path: polygon(0 0, 0 0, 0% 100%, 0% 100%); 
  transition: clip-path 0.5s ease-in-out, height 0.5s ease-in-out;
  z-index: 2;
  pointer-events: none;
  opacity: 1; /*KKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKK*/
}
#dropdown-carpet2 {
  position: absolute;
  right: 0;
  top: 100%;
  width: 100vw;
  height: var(--submenu-height);
  background: rgba(163, 196, 196, 0.9);
  clip-path: polygon(100% 0, 100% 0, 100% 100%, 100% 100%); 
  transition: clip-path 0.5s ease-in-out, height 0.5s ease-in-out;
  z-index: 2;
  pointer-events: none;
  opacity: 1; /*KKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKK*/
  
}

/*NAVBAR /////////////////////////////////////////////////*/
.navbar {
  position: sticky;
  top: 0;
  grid-row:2; /*not really necessary since the browser already interprets it this way*/
  z-index: 20;
}
.navbar__menu {
  display: flex;
  justify-content: center;
  position: relative; /*so the carpets refer to this only, instead of nav AND menu main*/
  z-index: 1;
  width: 100%;
  padding: 14px 0px;
  background-color: rgba(73, 104, 104, 0.85);
  margin:0;
  gap: 5px;
}
.navbar__option {
  /*No button relative here, so I can get the hover zone to span across the entire navbar*/
  cursor: pointer; /*changes cursor appearance when NOT hovering over it*/
  list-style: none;
  z-index: 4;
}
.navbar__option-link {
  text-decoration: none;
  color: white;
  font-family: 'EB Garamond', serif;
  font-size: 22.2px;
  padding: 5px 15px;
  display: block;
}
.navbar__option:hover ~ #dropdown-carpet,
.submenu:hover ~ #dropdown-carpet {
  clip-path: polygon(0% 0, 55% 0, calc(var(--hover-x, 50vw)*0.9) 100%, 0% 100%);
  opacity:1;
}
.navbar__option:hover ~ #dropdown-carpet2,
.submenu:hover ~ #dropdown-carpet2 {
  clip-path: polygon(100% 0, 45% 0, calc(var(--hover-x, 50vw)*0.8) 100%, 100% 100%);
  opacity:1;
}
.navbar__option:hover ~ #dropdown-carpet-background{
  opacity:1;
}


.quick-menu {
  position:absolute;
  top: 14.0%;
  right: 2.2%;
  width:7.8%;
  height: 75%;
  background-color:rgb(15, 32, 27);
  outline: 2px solid white;
  display: flex;
  align-items: center;
  justify-content: center;
}

.quick-menu__content {
  display: flex;
  justify-content:center;
  align-items:center;
  width:90%;
  height:90%;
  gap: 12.9%;
}

.quick-menu__content-item {
  display:flex;
  justify-content: center;
  align-items:center;
  width: 31.8%;
  height: 88%;
  background-color: yellow;
  outline: 1px solid red;
}













/*SUBMENU /////////////////////////////////////////////////////////////*/
.submenu * {
  pointer-events: auto; /* allow interaction INSIDE submenu */
  outline: 1px solid rgba(255, 0, 0, 0);
}
/* ... */

